tests/ui/spirv-attr/capabilities/no_items.stderr
error: `#[spirv(capability())]` requires a list.
 --> $DIR/no_items.rs:4:9
  |
4 | #[spirv(capability)]
  |         ^^^^^^^^^^

error: aborting due to previous error

